werkende pdf output met test variabelen meegegeven

--- a/template.html
+++ b/template.html
@@ -2,10 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title> {{ title }} </title>
 </head>
 <body>
-    <h2>Sales Funnel Report - National</h2>
-     {{ national_pivot_table }}
+    <h2>Test HTML</h2>
+     {{ test }}
 </body>
 </html>
