verandering aan reportdelta.html en style.css

--- a/reportdelta.html
+++ b/reportdelta.html
@@ -16,20 +16,20 @@
 
 <table align="center">
     <tr></tr>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/1.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/2.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/3.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/4.png", class="graph"></th>
     <tr></tr>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
-        <th><img src="thomas.jpg", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/5.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/6.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/7.png", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/8.png", class="graph"></th>
     <tr></tr>
-        <th><img src="thomas.jpg", height="150", width="150", class="graph"></th>
-        <th><img src="thomas.jpg", height="150", width="150", class="graph"></th>
-        <th><img src="thomas.jpg", height="150", width="150", class="graph"></th>
-        <th><img src="thomas.jpg", height="150", width="150", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/9.png", height="150", width="150", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/10.png", height="150", width="150", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/11.png", height="150", width="150", class="graph"></th>
+        <th><img src="/home/wall-e/Pictures/12.png", height="150", width="150", class="graph"></th>
 </table>
 
 <h2>Conclusion</h2>
