alignment van tabel in center + logo beter afgelijnd

--- a/reportdelta.html
+++ b/reportdelta.html
@@ -14,7 +14,7 @@
 </p>
 <h2>MSI Result by region (mSINGS)</h2>
 
-<table align="center">
+<table class="centertable">
     <tr></tr>
         <th><img src="/home/wall-e/Pictures/1.png", class="graph"></th>
         <th><img src="/home/wall-e/Pictures/2.png", class="graph"></th>
@@ -34,7 +34,7 @@
 
 <h2>Conclusion</h2>
 <p> 
-    <u>mSINGS score: </u><br>
+    <u>mSINGS score:</u><br>
     <br>
     &leq;2 : MSS (Microsatellite Stability) <br>
     >2  : MSI (Microsatellite Instability
